<resources>
    <string name="app_name">Smart Parking</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="msg_privacy_terms">By Logging in, you agree to our Terms &amp; Conditions and Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>

    <!--    Note : If you are changeing privacy policy and terms condition string then the word which you use in 'privacy_policy'
                and 'terms_conditions' these two words should be same in 'msg_privacy_terms' string.-->

    <string name="forgottext">Forgot password ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifications</string>
</resources>