<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true">
    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="234dp"
        android:layout_height="168dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:src="@drawable/logosps" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginBottom="@dimen/dimen_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_0dp"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:background="@drawable/card_shadow"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp">

            <LinearLayout
                android:id="@+id/lytlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/edtLoginMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/mobile"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                <EditText
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />


                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:text="@string/forgottext"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnlogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_30dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:text="@string/login"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/btcreate"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_30dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"

                    android:text="Create Account"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tvPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="@dimen/dimen_5dp"
                    android:text="@string/msg_privacy_terms"
                    android:textAlignment="center"
                    android:textColor="@color/gray_blue"
                    android:textSize="@dimen/p_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>